# arduIO

./: .gitignore  LICENSE  README.md  pyproject.toml
arduio/: README.md  arduio.py  test1.py
arduio_server/: README.md  arduio_server.ino
