[project]
name = "arduio"
version = "0.1.0"
authors = [{ name = "Peter Corke", email = "rvc@petercorke.com" }]
description = "Fast and simple Arduino i/o server"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # Indicate who your project is intended for
    "Intended Audience :: Developers",
    # Specify the Python versions you support here.
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",

    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["arduino", "io server", "table format"]

# dependencies = ["colored"]

[project.urls]
"Homepage" = "https://github.com/petercorke/arduio"
"Bug Tracker" = "https://github.com/petercorke/arduio/issues"
"Documentation" = "https://github.com/petercorke/arduio"
"Source" = "https://github.com/petercorke/arduio"

[project.optional-dependencies]


[build-system]

requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

packages = ["arduio"]

[tool.black]
line-length = 88
target-version = ['py38']
